--- a/blazor/MDStore/MDStore/Pages/FetchRecords.razor
+++ b/blazor/MDStore/MDStore/Pages/FetchRecords.razor
@@ -18,7 +18,7 @@ else
         @foreach (var record in records)
         {
             <li>
-                <a href="/">
+                <a href="@record.Album">
                     <DecorativeImage src="@BuildAlbumImagePath(record.AlbumImage)" />
                     <div>
                         <div aria-label="Album name">
