--- a/blazor/MDStore/MDStore/Shared/MainLayout.razor
+++ b/blazor/MDStore/MDStore/Shared/MainLayout.razor
@@ -1,15 +1,11 @@
 ﻿@inherits LayoutComponentBase
+<header class="header">
+    <MDStore.Components.AccessibleImage src="logo.png" altText="Music Discovery store logo"/>
+</header>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="page">    
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
