--- a/blazor/MDStore/MDStore/Shared/MainLayout.razor.css
+++ b/blazor/MDStore/MDStore/Shared/MainLayout.razor.css
@@ -79,3 +79,13 @@ main {
         padding-right: 1.5rem !important;
     }
 }
+
+.header{
+    background: #39607a;
+    color: #e4eced;
+    padding: 0.5rem 0 0.5rem 1rem;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 2;
+}
