--- a/blazor/MDStore/src/MDStore/Components/SkipToMainContent.razor
+++ b/blazor/MDStore/src/MDStore/Components/SkipToMainContent.razor
@@ -1,4 +1,4 @@
-<a href="@GetFragmentNavigation()" id="skipToMainContent">
+<a tabindex="0" href="@GetFragmentNavigation()" id="skipToMainContent">
     Skip to main content
 </a>
 
