--- a/blazor/MDStore/src/MDStore/Shared/MainLayout.razor
+++ b/blazor/MDStore/src/MDStore/Shared/MainLayout.razor
@@ -16,21 +16,28 @@
                     <span>
                         <SearchBox></SearchBox>
                     </span>
-                    <span>
-                        <a href="/account" class="headerLink">
-                            <span>Account</span>
-                            <span class="oi oi-person" aria-hidden="true"></span>
-                        </a>
-                    </span>
+
                 </div>
                 <hr />
                 <div>
-                    <ul class="list-group list-group-horizontal">
-                        <li class="list-group-item">A</li>
-                        <li class="list-group-item">B</li>
-                        <li class="list-group-item">C</li>
+                    <ul class="list-group list-group-horizontal pickGenre">
+                        <li class="list-group-item active" aria-selected="true">
+                            <button class="btn btn-light">Top 10</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn btn-light" aria-selected="false">Rock</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn btn-light" aria-selected="false">Classic</button>
+                        </li>
                     </ul>
                 </div>
+            </div>
+            <div class="col-sm userLogin">
+                <a href="/account" class="headerLink">
+                    <span>Account</span>
+                    <span class="oi oi-person" aria-hidden="true"></span>
+                </a>
             </div>
 
         </div>
