--- a/blazor/MDStore/src/MDStore/Shared/MainLayout.razor
+++ b/blazor/MDStore/src/MDStore/Shared/MainLayout.razor
@@ -20,17 +20,7 @@
                 </div>
                 <hr />
                 <div>
-                    <ul class="list-group list-group-horizontal pickGenre">
-                        <li class="list-group-item active" aria-selected="true">
-                            <button class="btn btn-light">Top 10</button>
-                        </li>
-                        <li class="list-group-item">
-                            <button class="btn btn-light" aria-selected="false">Rock</button>
-                        </li>
-                        <li class="list-group-item">
-                            <button class="btn btn-light" aria-selected="false">Classic</button>
-                        </li>
-                    </ul>
+                    <CategorySelector categories="@categories" />
                 </div>
             </div>
             <div class="col-sm userLogin">
@@ -52,3 +42,7 @@
         </article>
     </main>
 </div>
+@code {
+
+    private string[] categories = new string[] { "Rock", "Metal", "Classic" };
+}
