--- a/blazor/MDStore/src/MDStore/Pages/Records.razor
+++ b/blazor/MDStore/src/MDStore/Pages/Records.razor
@@ -2,6 +2,7 @@
 @using MDStore.Components
 @inject RecordService RecordService
 @inject NavigationManager NavigationManager
+@inject RecordsStoreState State
 @inherits FragmentNavigationBase
 @implements IDisposable
 
