--- a/blazor/BlazorWAI/src/BlazorWAI.WASM/Shared/NavMenu.razor
+++ b/blazor/BlazorWAI/src/BlazorWAI.WASM/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">BlazorWAI.WASM</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
+    <button class="navbar-toggler" aria-label="Menu" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
@@ -20,6 +20,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="shipping">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Shipping
             </NavLink>
         </li>
     </ul>
